NIFI-14110 Support to limit content size in PackageFlowFile
Due to using a different API to retrieve the FlowFiles
the behaviour when working with multiple queues is no longer unspecified.

Enhance tests to ensure FlowFiles are rejected once size limit was reached

Explain batching behaviour in UseCases

Signed-off-by: Mike Moser <mosermw@apache.org>

Closes #9595